# home-ui

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  nginx-setup.conf  pyproject.toml  services.yaml
app/: config.py  main.py
app/templates/: base.html  dashboard.html  login.html
